--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ body {
   width: 1024px;
   padding: 10px;
   box-sizing: border-box;
-  outline: 1px solid black;
 }
 
 
@@ -40,6 +39,44 @@ body {
   transform: translateX(-50%);
 }
 
+
+#main-footer {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  padding: 20px 0 0 0;
+  box-sizing: border-box;
+  bottom: 0;
+  color: #0A908F;
+  font-family: Roboto;
+  text-align: center;
+}
+
+/* Main */
+main {
+  display: block;
+  position: relative;
+  width: 100%;
+  top: 50px;
+}
+
+main .wrap {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
+
+/* Resultado */
+.result {
+  display: block;
+  font-size: 3.5em;
+  font-weight: 500;
+  font-family: 'Roboto';
+  color: #fafafa;
+  text-align: center;
+}
 
 /* Big Input */
 .input-container {
