--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+  overflow-x: hidden;
   background: #10CBCF;
   /*color: #EEFF41;*/
 }
@@ -65,6 +66,24 @@ body {
   text-align: center;
 }
 
+
+/* Explanation */
+#explanation {
+  display: inline-block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  opacity: 0;
+  transition: transform .5s ease-in-out, opacity .2s ease-in-out;
+  transform: translate(100%, -50%);
+}
+
+#explanation.show {
+  opacity: 1;
+  transform: translate(-50%, -50%); 
+}
+
+
 /* Main */
 main {
   display: block;
@@ -79,11 +98,21 @@ main .wrap {
 }
 
 .main-menu {
+  display: inline-block;
   position: absolute;
+  width: initial;
   top: 50%;
   left: 50%;
+  opacity: 1;
   transform: translate(-50%, -50%);
+  transition: transform .5s ease-in-out, opacity .2s ease-in-out;
 }
+
+.main-menu.hide {
+  transform: translateX(-195%) translateY(-50%);
+  opacity: 0;
+}
+
 
 #main-nav {
   position: relative;
