--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,10 @@ main .wrap {
   box-shadow: 0 15px 25px 0 rgba(0,0,0,0.2), 0 20px 35px 0 rgba(0,0,0,0.2);
 }
 
+.fab.copy {
+  bottom: -100px;
+}
+
 .fab i {
   position: relative;
   left: 50%;
@@ -207,11 +211,20 @@ main .wrap {
 /* Resultado */
 .result {
   display: block;
-  font-size: 3.5em;
+  width: 100%;
+  height: 250px;
+  border: none;
+  font-size: 3em;
   font-weight: 500;
   font-family: 'Roboto';
-  color: #fafafa;
   text-align: center;
+  color: #fafafa;
+  background: transparent;
+  resize: none;
+}
+
+.result:focus {
+  outline: none;
 }
 
 /* Big Input */
