--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   overflow-x: hidden;
-  background: #10CBCF;
+  background: #10CBCF
   /*color: #EEFF41;*/
 }
 
@@ -141,6 +141,63 @@ main .wrap {
 }
 
 
+/* Dropdown Menu */
+
+.menu-container {
+  z-index: 1;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  width: auto;
+  height: auto;
+  padding: 10px;
+  top: -20px;
+  box-sizing: border-box;
+  border-radius: 4.5px;
+  background-color: #fafafa;
+  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.1), 0 2px 3px 0 rgba(0,0,0,0.2);
+}
+
+.dropdown-menu:before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  top: -6px;
+  left: 18px;
+  vertical-align: middle;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #fafafa;
+}
+
+.dropdown-menu ul li a{
+  display: block;
+  padding: 15px;
+  margin: 0 -10px 0 -10px;
+  font-family: 'Roboto';
+  text-decoration: none;
+  color: #666;
+}
+
+.dropdown-menu ul li:first-child a {
+  margin: -10px -10px 0 -10px
+}
+
+.dropdown-menu ul li:last-child a {
+  margin: 0 -10px -10px -10px
+}
+
+.dropdown-menu ul li a:hover {
+  background: rgba(0,0,0,0.1);
+}
+
+.dropdown-menu.show {
+  display: block;
+}
 
 .nav-button {
   display: inline-block;
@@ -243,6 +300,7 @@ main .wrap {
   margin: 0 0 20px 0;
   background: #fafafa;
   border-radius: 5px;
+  overflow: hidden;
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.1), 0 2px 3px 0 rgba(0,0,0,0.2);
   transform: translateX(-50%);
 }
@@ -254,7 +312,12 @@ main .wrap {
   height: 50px;
   margin: 0 10px 0 0;
   float: left;
+  cursor: pointer;
   /*outline: 1px solid black;*/
+}
+
+.input-icon:hover {
+  background: rgba(0,0,0,0.1);
 }
 
 .input-icon i {
@@ -281,8 +344,9 @@ main .wrap {
 }
 
 /* Key */
-.key-container {
-  display: block;
+.key-container,
+.menu-container {
+  display: inline-block;
   position: relative;
   width: 680px;
   left: 50%;
