--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -15,11 +15,21 @@
 
 
 
-// Basic Styles and Media Queries - BODY, WRAP, BUTTONS
+// Basic Styles and Media Queries - BODY, WRAP, MAIN, BUTTONS
 body 
   font-family: $font-face
   background: $main-color
   overflow-x: hidden
+
+
+main
+  display: block
+  position: relative
+  width: 100%
+  top: 50px
+
+  .wrap
+    +center(x)
 
 
 .wrap
@@ -29,16 +39,51 @@ body
   padding: 10px
   box-sizing: border-box
 
+
 @media only screen and('max-width: 1024px')
   .wrap
     width: 100%
 
 
 
-// Navigation Menu at Index and Buttons
-.main-nav
+// Project's logo and subtitle placed at HEADER
+.logo
+  display: block
   position: relative
-  width: 270px
+  margin: 50px 0 30px 0
+  font-size: 2em
+  font-family: $font-slab
+  text-align: center
+  color: darken($main-color, 15%)
+  
+  &.homescreen
+    margin: 0 0 30px 0
+
+
+.subtitle
+  margin: 0 0 30px 0
+  font-size: 1.2em
+  font-family: $font-face
+  font-weight: 500
+  text-align: center
+  color: #fafafa
+
+
+
+// MAIN_MENU, NAVIGATION_MENU and BUTTONS at Index
+.main-menu
+  display: inline-block
+  position: absolute
+  width: initial
+  opacity: 1
+  transition: transform .5s ease-in-out, opacity .2s ease-in-out
+  +center()
+
+
+.main-nav
+  display: inline-block
+  position: relative
+  width: 220px
   +center(x)
 
   .material-button
