Dialogo de informações criado

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -2,6 +2,10 @@
 // endbower
 
 
+// Imports - Mixins
+@import 'mixins/centralize'
+@import 'mixins/zdepth'
+
 // Imports - Miscs
 @import 'miscs/browsehappy'
 @import 'miscs/colorscheme'
@@ -9,9 +13,8 @@
 
 // Imports - Components
 @import 'components/buttons'
+@import 'components/dialogs'
 
-// Imports - Mixins
-@import 'mixins/centralize'
 
 
 
@@ -46,7 +49,7 @@ main
 
 
 
-// Project's logo and subtitle placed at HEADER
+// Project's logo and subtitle placed at MAIN_MENU
 .logo
   display: block
   position: relative
