--- a/app/styles/components/_buttons.sass
+++ b/app/styles/components/_buttons.sass
@@ -32,6 +32,8 @@
     min-width: 0px
     background: transparent
     box-shadow: none
+    font-weight: 400
+    color: darken($main-color, 26%)
 
     &:hover
-      background: rgba(0,0,0,0.4)
+      background: rgba(0,0,0,0.1)
