Função para atualizar o valor do range atualizada

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -231,3 +231,21 @@ main
   
   &:focus
     outline: none
+
+
+// Big and Encripted Result
+.result 
+  display: block
+  width: 100%
+  height: 250px
+  border: none
+  font-size: 3em
+  font-weight: 500
+  font-family: $font-face
+  text-align: center
+  color: $light-color
+  background: transparent
+  resize: none
+
+  &:focus
+    outline: none
