--- a/app/styles/components/_buttons.sass
+++ b/app/styles/components/_buttons.sass
@@ -37,3 +37,32 @@
 
     &:hover
       background: rgba(0,0,0,0.1)
+
+
+.fab
+  position: fixed
+  padding: 10px
+  width: 35px
+  height: 35px
+  background-color: #EEFF41
+  border-radius: 100%
+  bottom: 0
+  right: 0
+  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.1), 0 2px 3px 0 rgba(0,0,0,0.2)
+  opacity: 1
+  transition: all .2s cubic-bezier(.4,.08,.14,.82)
+
+  &:active
+    +zdepth(3)
+
+  &.copy
+    margin: 0 20px 20px 0
+  
+  &.hide
+    opacity: 0 !important
+    transform: scale(0) !important
+  
+  i
+    position: relative
+    color: rgba(0,0,0,0.6)
+    +center()
