--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -132,6 +132,11 @@ main
     border-left: 6px solid transparent
     border-right: 6px solid transparent
     border-bottom: 6px solid $light-color
+  
+  ul
+    padding: 0
+    margin: 0
+    list-style: none
 
   ul li a
     display: block
