--- a/app/styles/mixins/_centralize.sass
+++ b/app/styles/mixins/_centralize.sass
@@ -12,3 +12,8 @@
   @if $axis == "x"
     left: 50%
     transform: translateX(-50%)
+
+  @if $axis == "clear"
+    top: 0
+    left: 0
+    transform: initial
